# Str-EEA-t_Fighter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mingw_build.bat  mingw_install_all.bat  uninstall_all.bat  uninstall_build.bat  vs32_build.bat  vs32_install_all.bat  vs64_build.bat  vs64_install_all.bat
Client/: .gitmodules  CMakeLists.txt  mingw_install_all.bat  uninstall_all.bat  uninstall_build.bat  vs32_build.bat  vs32_install_all.bat  vs64_2019_build.bat  vs64_2019_install_all.bat  vs64_build.bat  vs64_install_all.bat
Client/include/: App.hpp  Bot.hpp  Boxer.hpp  Button.hpp  Client_Streeeat_Fighter.h  Client_Streeeat_Fighter.hpp  Data_structs.hpp  IpPortBox.hpp  MainMenu.hpp  MultiPlayer.hpp  MultiPlayerMenu.hpp  Player.h  Player.hpp  PlayerOnline.hpp  Scene.hpp  Settings.hpp  SinglePlayer.hpp  Timer.hpp  Toolbox.hpp  Vec2D.hpp  WebcamManager.hpp  handTracking.hpp  headCalibration.hpp  headCorrelationTracking.hpp
Client/src/: App.cpp  Bot.cpp  Boxer.cpp  Button.cpp  Client_Streeeat_Fighter.cpp  IpPortBox.cpp  MainMenu.cpp  MultiPlayer.cpp  MultiPlayerMenu.cpp  Player.cpp  PlayerOnline.cpp  SinglePlayer.cpp  Toolbox.cpp  WebcamManager.cpp  handTracking.cpp  headCalibration.cpp  headCorrelationTracking.cpp  main.cpp  main_max.cpp  videoProcessing.cpp
Server/: CMakeLists.txt
Server/include/: Data_structs.hpp  Gameplay.hpp  Player.h  Player.hpp  Server_Streeeat_Fighter.h  Server_Streeeat_Fighter.hpp  Timer.h  Timer.hpp  Vec2D.hpp  a.hpp
Server/src/: Gameplay.cpp  Player.cpp  Server_Streeeat_Fighter.cpp  main.cpp
include/: App.hpp
src/: App.cpp  main.cpp
